objects/Client_Credentials_Auth_Provider_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Client Credentials Auth Provider Setting</label>
    <pluralLabel>Client Credentials Auth Provider Setting</pluralLabel>
</CustomObject>